--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -138,6 +138,7 @@ set(SRCS	ActionReplay.cpp
 			HW/WiimoteReal/WiimoteReal.cpp
 			HW/WiiSaveCrypted.cpp
 			IOS/Device.cpp
+			IOS/DeviceLLE.cpp
 			IOS/DeviceStub.cpp
 			IOS/IPC.cpp
 			IOS/MIOS.cpp
